Optuna/ZeroK-Tuner/kube/prometheus/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prom-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: prometheus.local
    http:
      paths:
      - backend:
          service:
            name: prom-kube-prometheus-stack-prometheus
            port: 
              number: 9090
        path: /
        pathType: Prefix
  - host: grafana.local
    http:
      paths:
      - backend:
          service:
            name: prom-grafana
            port: 
              number: 80
        path: /
        pathType: Prefix
